# grag-codescan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  example.config.yaml  main.py  pyproject.toml  settings.ini.example
app/ai/: workflow.py
app/models/: analysis_cache.py
notebooks/: code_explanation.ipynb  codesplitter.ipynb  file_explorer.ipynb  gitgraph.ipynb  graph.dot  graph.ipynb  hack.ipynb
src/: main.py  settings.py
src/modules/: __init__.py  chat.py  github.py  github_clone.py  graph.py  sidebar.py  structure_output.py
src/modules/structured_output/: graph.py  mapping.py
src/prompts/: __init__.py  graph.py  instruction.py  mapping.py
src/templates/graph/: system.j2
src/templates/instruction/: system.j2
src/templates/mapping/: system.j2
src/ui/: __init__.py  chat.py  graph.py  sidebar.py
src/workflows/: __init__.py
src/workflows/analysis/: events.py  flow.py
