[project]
name = "grag-codescan"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.11",
    "gradio>=5.20.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-ollama>=0.2.3",
    "llama-index>=0.12.22",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.5.3",
    "llama-index-readers-github>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "mlflow>=2.20.3",
    "pydantic-settings>=2.8.1",
    "pyvis>=0.3.2",
    "qdrant-client>=1.13.3",
    "rich>=13.9.4",
    "tree-sitter<=0.22",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.6",
    "yfiles-jupyter-graphs>=1.10.1",
]

[dependency-groups]
prod = [
    "beanie>=1.29.0",
    "fastapi>=0.115.11",
    "gradio>=5.20.1",
    "llama-index>=0.12.22",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.5.3",
    "llama-index-readers-github>=0.6.0",
    "tree-sitter<=0.22",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.23.6",
    "pydantic-settings>=2.8.1",
    "llama-index-vector-stores-qdrant>=0.6.0",
]
